--- a/app/src/main/res/layout/lw006_activity_device_info.xml
+++ b/app/src/main/res/layout/lw006_activity_device_info.xml
@@ -78,7 +78,7 @@
                 android:gravity="center"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
-                android:text="@string/title_lora"
+                android:text="Network"
                 android:textColor="@drawable/lw006_selector_option_radiobtn_color"
                 android:textSize="12sp" />
 
