--- a/app/src/main/res/layout/activity_axis_data_report.xml
+++ b/app/src/main/res/layout/activity_axis_data_report.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/grey_f2f2f2"
@@ -28,7 +27,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="@string/downlink_for_position"
+            android:text="3-Axis Data Report"
             android:textColor="@color/white_ffffff"
             android:textSize="17sp"
             android:textStyle="bold" />
@@ -40,43 +39,48 @@
             android:onClick="onSave"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
-            android:src="@drawable/lw006_ic_save"
-            android:visibility="gone" />
-
+            android:src="@drawable/lw006_ic_save" />
     </RelativeLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_height="50dp"
+        android:layout_margin="12dp"
         android:background="@color/white_ffffff"
-        android:padding="10dp">
+        android:orientation="horizontal"
+        android:paddingStart="12dp"
+        android:paddingEnd="12dp">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Positioning Strategy"
+            android:layout_width="0px"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:text="3-Axis Data Report Interval"
             android:textColor="@color/black_333333"
             android:textSize="15sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@id/tv_downlink_pos_strategy"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="@id/tv_downlink_pos_strategy" />
+            android:textStyle="bold" />
+
+        <EditText
+            android:id="@+id/etInterval"
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:hint="0~65535"
+            android:inputType="number"
+            android:maxLength="5"
+            android:textColor="@color/black_333333"
+            android:textColorHint="@color/grey_999999"
+            android:textSize="15sp" />
 
         <TextView
-            android:id="@+id/tv_downlink_pos_strategy"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/shape_radius_blue_btn_bg"
-            android:gravity="center"
-            android:minWidth="70dp"
-            android:onClick="selectPosStrategy"
-            android:padding="12dp"
-            android:text="GPS"
-            android:textColor="@color/white_ffffff"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="12dp"
+            android:gravity="center_vertical"
+            android:text="s"
+            android:textColor="@color/black_333333"
             android:textSize="15sp"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:textStyle="bold" />
+    </LinearLayout>
 </LinearLayout>
