--- a/app/src/main/res/layout/lw006_activity_alarm_function.xml
+++ b/app/src/main/res/layout/lw006_activity_alarm_function.xml
@@ -15,13 +15,11 @@
             android:id="@+id/tv_back"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:clickable="true"
             android:drawableLeft="@drawable/lw006_ic_back"
             android:drawablePadding="6dp"
             android:gravity="center_vertical"
             android:onClick="onBack"
             android:paddingLeft="16dp"
-            android:text=""
             android:textColor="@color/white_ffffff"
             android:textSize="15sp" />
 
@@ -39,7 +37,6 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
-            android:clickable="true"
             android:onClick="onSave"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
@@ -64,7 +61,9 @@
             android:text="Alarm Type"
             android:textColor="@color/black_333333"
             android:textSize="15sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tvAlarmType"
@@ -82,6 +81,8 @@
         <View
             android:id="@+id/line1"
             style="@style/lw006_divider_line"
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
             app:layout_constraintTop_toBottomOf="@id/tv1" />
 
         <TextView
@@ -93,6 +94,7 @@
             android:textColor="@color/black_333333"
             android:textSize="15sp"
             android:textStyle="bold"
+            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/line1" />
 
         <TextView
@@ -137,6 +139,8 @@
         <View
             android:id="@+id/line2"
             style="@style/lw006_divider_line"
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
             app:layout_constraintTop_toBottomOf="@id/tv2" />
 
         <TextView
@@ -154,6 +158,8 @@
         <View
             android:id="@+id/line3"
             style="@style/lw006_divider_line"
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
             app:layout_constraintTop_toBottomOf="@id/tvAlertAlarmSetting" />
 
         <TextView
