--- a/app/src/main/res/layout/lw006_activity_auxiliary_operation.xml
+++ b/app/src/main/res/layout/lw006_activity_auxiliary_operation.xml
@@ -15,13 +15,11 @@
             android:id="@+id/tv_back"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:clickable="true"
             android:drawableLeft="@drawable/lw006_ic_back"
             android:drawablePadding="6dp"
             android:gravity="center_vertical"
             android:onClick="onBack"
             android:paddingLeft="16dp"
-            android:text=""
             android:textColor="@color/white_ffffff"
             android:textSize="15sp" />
 
@@ -39,7 +37,6 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
-            android:clickable="true"
             android:onClick="onSave"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
@@ -47,66 +44,69 @@
             android:visibility="gone" />
     </RelativeLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginRight="10dp"
         android:background="@color/white_ffffff"
+        android:orientation="vertical"
         android:paddingStart="10dp"
-        android:paddingEnd="10dp"
-        app:layout_constraintTop_toTopOf="parent">
+        android:paddingEnd="10dp">
 
         <TextView
             android:id="@+id/tv_downlink_for_pos"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:clickable="true"
             android:drawableRight="@drawable/lw006_ic_arrow_right"
             android:gravity="center_vertical"
             android:onClick="onDownlinkForPos"
             android:text="@string/downlink_for_position"
             android:textColor="@color/black_333333"
             android:textSize="15sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <View
-            android:id="@+id/line1"
-            style="@style/lw006_divider_line"
-            app:layout_constraintTop_toBottomOf="@id/tv_downlink_for_pos" />
+        <View style="@style/lw006_divider_line" />
 
         <TextView
             android:id="@+id/tv_man_down_detection"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:clickable="true"
             android:drawableRight="@drawable/lw006_ic_arrow_right"
             android:gravity="center_vertical"
             android:onClick="onManDownDetection"
             android:text="@string/man_down_detection"
             android:textColor="@color/black_333333"
             android:textSize="15sp"
-            android:textStyle="bold"
-            app:layout_constraintTop_toBottomOf="@id/line1" />
+            android:textStyle="bold" />
 
-        <View
-            android:id="@+id/line3"
-            style="@style/lw006_divider_line"
-            app:layout_constraintTop_toBottomOf="@id/tv_man_down_detection" />
+        <View style="@style/lw006_divider_line" />
 
         <TextView
             android:id="@+id/tvAlarmFunction"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:clickable="true"
             android:drawableRight="@drawable/lw006_ic_arrow_right"
             android:gravity="center_vertical"
-            android:text="Alarm Function"
             android:onClick="onAlarmFunction"
+            android:text="Alarm Function"
             android:textColor="@color/black_333333"
             android:textSize="15sp"
-            android:textStyle="bold"
-            app:layout_constraintTop_toBottomOf="@id/line3" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:textStyle="bold" />
+        <View style="@style/lw006_divider_line" />
+
+        <TextView
+            android:id="@+id/tvAxisDataReport"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:drawableRight="@drawable/lw006_ic_arrow_right"
+            android:gravity="center_vertical"
+            android:onClick="onAlarmFunction"
+            android:text="3-Axis Data Report"
+            android:textColor="@color/black_333333"
+            android:textSize="15sp"
+            android:textStyle="bold" />
+    </LinearLayout>
 </LinearLayout>
