--- a/app/src/main/res/layout/lw006_activity_ble_settings.xml
+++ b/app/src/main/res/layout/lw006_activity_ble_settings.xml
@@ -15,13 +15,11 @@
             android:id="@+id/tv_back"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:clickable="true"
             android:drawableLeft="@drawable/lw006_ic_back"
             android:drawablePadding="6dp"
             android:gravity="center_vertical"
             android:onClick="onBack"
             android:paddingLeft="16dp"
-            android:text=""
             android:textColor="@color/white_ffffff"
             android:textSize="15sp" />
 
@@ -39,13 +37,11 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
-            android:clickable="true"
             android:onClick="onSave"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
             android:src="@drawable/lw006_ic_save" />
     </RelativeLayout>
-
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_adv_params"
@@ -68,6 +64,7 @@
             android:textColor="@color/black_333333"
             android:textSize="15sp"
             android:textStyle="bold"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent" />
 
         <EditText
@@ -90,6 +87,8 @@
         <View
             android:id="@+id/line1"
             style="@style/lw006_divider_line"
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
             app:layout_constraintTop_toBottomOf="@id/tv1" />
 
         <TextView
@@ -101,6 +100,7 @@
             android:textColor="@color/black_333333"
             android:textSize="15sp"
             android:textStyle="bold"
+            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/line1" />
 
         <EditText
@@ -153,6 +153,7 @@
             android:textColor="@color/black_333333"
             android:textSize="15sp"
             android:textStyle="bold"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent" />
 
         <EditText
@@ -187,6 +188,8 @@
         <View
             android:id="@+id/line2"
             style="@style/lw006_divider_line"
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
             app:layout_constraintTop_toBottomOf="@id/tv3" />
 
         <TextView
@@ -205,7 +208,6 @@
             android:id="@+id/iv_login_mode"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:clickable="true"
             android:onClick="onChangeLoginMode"
             android:paddingLeft="6dp"
             android:paddingTop="6dp"
@@ -217,6 +219,8 @@
         <View
             android:id="@+id/line3"
             style="@style/lw006_divider_line"
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
             app:layout_constraintTop_toBottomOf="@id/tv4" />
 
         <TextView
@@ -224,7 +228,6 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@color/white_ffffff"
-            android:clickable="true"
             android:drawableRight="@drawable/lw006_ic_arrow_right"
             android:gravity="center_vertical"
             android:onClick="onChangePassword"
