--- a/app/src/main/res/layout/lw006_activity_device_mode.xml
+++ b/app/src/main/res/layout/lw006_activity_device_mode.xml
@@ -15,13 +15,11 @@
             android:id="@+id/tv_back"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:clickable="true"
             android:drawableLeft="@drawable/lw006_ic_back"
             android:drawablePadding="6dp"
             android:gravity="center_vertical"
             android:onClick="onBack"
             android:paddingLeft="16dp"
-            android:text=""
             android:textColor="@color/white_ffffff"
             android:textSize="15sp" />
 
@@ -34,18 +32,6 @@
             android:textColor="@color/white_ffffff"
             android:textSize="17sp"
             android:textStyle="bold" />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_alignParentRight="true"
-            android:clickable="true"
-            android:onClick="onSave"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:src="@drawable/lw006_ic_save"
-            android:visibility="gone" />
-
     </RelativeLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -64,14 +50,15 @@
             android:text="Device Mode"
             android:textColor="@color/black_333333"
             android:textSize="15sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tv_device_mode"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:background="@drawable/shape_radius_blue_btn_bg"
-            android:clickable="true"
             android:gravity="center"
             android:minWidth="70dp"
             android:onClick="selectDeviceMode"
@@ -87,6 +74,8 @@
         <View
             android:id="@+id/line1"
             style="@style/lw006_divider_line"
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
             app:layout_constraintTop_toBottomOf="@id/tvDeviceMode1" />
 
         <TextView
@@ -104,13 +93,14 @@
         <View
             android:id="@+id/line4"
             style="@style/lw006_divider_line"
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
             app:layout_constraintTop_toBottomOf="@id/tv_standby_mode" />
 
         <TextView
             android:id="@+id/tv_timing_mode"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:clickable="true"
             android:drawableRight="@drawable/lw006_ic_arrow_right"
             android:gravity="center_vertical"
             android:onClick="onTimingMode"
@@ -123,13 +113,14 @@
         <View
             android:id="@+id/line2"
             style="@style/lw006_divider_line"
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
             app:layout_constraintTop_toBottomOf="@id/tv_timing_mode" />
 
         <TextView
             android:id="@+id/tv_periodic_mode"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:clickable="true"
             android:drawableRight="@drawable/lw006_ic_arrow_right"
             android:gravity="center_vertical"
             android:onClick="onPeriodicMode"
@@ -142,13 +133,14 @@
         <View
             android:id="@+id/line3"
             style="@style/lw006_divider_line"
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
             app:layout_constraintTop_toBottomOf="@id/tv_periodic_mode" />
 
         <TextView
             android:id="@+id/tv_motion_mode"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:clickable="true"
             android:drawableRight="@drawable/lw006_ic_arrow_right"
             android:gravity="center_vertical"
             android:onClick="onMotionMode"
@@ -158,5 +150,4 @@
             android:textStyle="bold"
             app:layout_constraintTop_toBottomOf="@id/line3" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 </LinearLayout>
