--- a/app/src/main/res/layout/lw006_activity_filter_bxp_button.xml
+++ b/app/src/main/res/layout/lw006_activity_filter_bxp_button.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/grey_f2f2f2"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -14,13 +15,11 @@
             android:id="@+id/tv_back"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:clickable="true"
             android:drawableLeft="@drawable/lw006_ic_back"
             android:drawablePadding="6dp"
             android:gravity="center_vertical"
             android:onClick="onBack"
             android:paddingLeft="16dp"
-            android:text=""
             android:textColor="@color/white_ffffff"
             android:textSize="15sp" />
 
@@ -38,7 +37,6 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
-            android:clickable="true"
             android:onClick="onSave"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
@@ -46,132 +44,123 @@
 
     </RelativeLayout>
 
-    <ScrollView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/grey_f2f2f2"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:background="@color/white_ffffff">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
+        <CheckBox
+            android:id="@+id/cb_enable"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="12dp"
+            android:button="@null"
+            android:checked="false"
+            android:drawableRight="@drawable/selector_cb_btn"
+            android:text="BXP-Button"
+            android:textColor="@color/black_333333"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <View
+            style="@style/lw006_divider_line"
+            android:layout_width="0dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/cb_enable" />
+
+        <TextView
+            android:id="@+id/filter"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:background="@color/white_ffffff"
-            android:focusable="true"
-            android:focusableInTouchMode="true">
+            android:layout_marginLeft="12dp"
+            android:layout_marginTop="10dp"
+            android:text="Alarm Filter"
+            android:textColor="@color/black_333333"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/cb_enable" />
 
-            <CheckBox
-                android:id="@+id/cb_enable"
-                android:layout_width="0dp"
-                android:layout_height="50dp"
-                android:layout_marginLeft="12dp"
-                android:layout_marginRight="12dp"
-                android:button="@null"
-                android:checked="false"
-                android:drawableRight="@drawable/selector_cb_btn"
-                android:text="BXP-Button"
-                android:textColor="@color/black_333333"
-                android:textSize="15sp"
-                android:textStyle="bold"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+        <CheckBox
+            android:id="@+id/cb_single_press"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:button="@null"
+            android:checked="false"
+            android:drawableRight="@drawable/selector_cb_btn"
+            android:paddingLeft="12dp"
+            android:paddingRight="12dp"
+            android:text="Single Press"
+            android:textColor="@color/black_333333"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            app:layout_constraintHorizontal_bias="0"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/filter"
+            app:layout_constraintWidth_percent="0.4" />
 
-            <View
-                style="@style/lw006_divider_line"
-                android:layout_width="0dp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/cb_enable" />
+        <CheckBox
+            android:id="@+id/cb_double_press"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:button="@null"
+            android:checked="false"
+            android:drawableRight="@drawable/selector_cb_btn"
+            android:paddingLeft="12dp"
+            android:paddingRight="12dp"
+            android:text="Double Press"
+            android:textColor="@color/black_333333"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            app:layout_constraintHorizontal_bias="1"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/filter"
+            app:layout_constraintWidth_percent="0.6" />
 
-            <TextView
-                android:id="@+id/filter"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="12dp"
-                android:layout_marginTop="10dp"
-                android:text="Alarm Filter"
-                android:textColor="@color/black_333333"
-                android:textSize="15sp"
-                android:textStyle="bold"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/cb_enable" />
+        <CheckBox
+            android:id="@+id/cb_long_press"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:button="@null"
+            android:checked="false"
+            android:drawableRight="@drawable/selector_cb_btn"
+            android:paddingLeft="12dp"
+            android:paddingRight="12dp"
+            android:text="Long Press"
+            android:textColor="@color/black_333333"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            app:layout_constraintHorizontal_bias="0"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/cb_single_press"
+            app:layout_constraintWidth_percent="0.4" />
 
-            <CheckBox
-                android:id="@+id/cb_single_press"
-                android:layout_width="0dp"
-                android:layout_height="50dp"
-                android:button="@null"
-                android:checked="false"
-                android:drawableRight="@drawable/selector_cb_btn"
-                android:paddingLeft="12dp"
-                android:paddingRight="12dp"
-                android:text="Single Press"
-                android:textColor="@color/black_333333"
-                android:textSize="15sp"
-                android:textStyle="bold"
-                app:layout_constraintHorizontal_bias="0"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/filter"
-                app:layout_constraintWidth_percent="0.4" />
-
-            <CheckBox
-                android:id="@+id/cb_double_press"
-                android:layout_width="0dp"
-                android:layout_height="50dp"
-                android:button="@null"
-                android:checked="false"
-                android:drawableRight="@drawable/selector_cb_btn"
-                android:paddingLeft="12dp"
-                android:paddingRight="12dp"
-                android:text="Double Press"
-                android:textColor="@color/black_333333"
-                android:textSize="15sp"
-                android:textStyle="bold"
-                app:layout_constraintHorizontal_bias="1"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/filter"
-                app:layout_constraintWidth_percent="0.6" />
-
-            <CheckBox
-                android:id="@+id/cb_long_press"
-                android:layout_width="0dp"
-                android:layout_height="50dp"
-                android:button="@null"
-                android:checked="false"
-                android:drawableRight="@drawable/selector_cb_btn"
-                android:paddingLeft="12dp"
-                android:paddingRight="12dp"
-                android:text="Long Press"
-                android:textColor="@color/black_333333"
-                android:textSize="15sp"
-                android:textStyle="bold"
-                app:layout_constraintHorizontal_bias="0"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/cb_single_press"
-                app:layout_constraintWidth_percent="0.4" />
-
-            <CheckBox
-                android:id="@+id/cb_abnormal_inactivity"
-                android:layout_width="0dp"
-                android:layout_height="50dp"
-                android:button="@null"
-                android:checked="false"
-                android:drawableRight="@drawable/selector_cb_btn"
-                android:paddingLeft="12dp"
-                android:paddingRight="12dp"
-                android:text="Abnormal Inactivity"
-                android:textColor="@color/black_333333"
-                android:textSize="15sp"
-                android:textStyle="bold"
-                app:layout_constraintHorizontal_bias="1"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/cb_single_press"
-                app:layout_constraintWidth_percent="0.6" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
+        <CheckBox
+            android:id="@+id/cb_abnormal_inactivity"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:button="@null"
+            android:checked="false"
+            android:drawableRight="@drawable/selector_cb_btn"
+            android:paddingLeft="12dp"
+            android:paddingRight="12dp"
+            android:text="Abnormal Inactivity"
+            android:textColor="@color/black_333333"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            app:layout_constraintHorizontal_bias="1"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/cb_single_press"
+            app:layout_constraintWidth_percent="0.6" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
