--- a/app/src/main/res/layout/lw006_activity_filter_mkpir.xml
+++ b/app/src/main/res/layout/lw006_activity_filter_mkpir.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/grey_f2f2f2"
@@ -33,7 +32,6 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
-            android:clickable="true"
             android:onClick="onSave"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
@@ -58,11 +56,14 @@
             android:text="MK-PIR"
             android:textColor="@color/black_333333"
             android:textSize="15sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <View
             android:id="@+id/line1"
             style="@style/lw006_divider_line"
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
             app:layout_constraintTop_toBottomOf="@+id/cbMkPir" />
 
         <TextView
@@ -74,6 +75,7 @@
             android:textColor="@color/black_333333"
             android:textSize="15sp"
             android:textStyle="bold"
+            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/line1" />
 
         <TextView
@@ -82,19 +84,21 @@
             android:layout_height="40dp"
             android:background="@drawable/shape_radius_blue_btn_bg"
             android:gravity="center"
+            android:minWidth="70dp"
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
-            android:minWidth="70dp"
+            android:text="All"
             android:textColor="@color/white_ffffff"
             android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="@+id/tvDelayResStatus1"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/tvDelayResStatus1"
-            android:text="All" />
+            app:layout_constraintTop_toTopOf="@+id/tvDelayResStatus1" />
 
         <View
             android:id="@+id/line2"
             style="@style/lw006_divider_line"
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
             app:layout_constraintTop_toBottomOf="@+id/tvDelayResStatus1" />
 
         <TextView
@@ -106,6 +110,7 @@
             android:textColor="@color/black_333333"
             android:textSize="15sp"
             android:textStyle="bold"
+            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/line2" />
 
         <TextView
@@ -114,19 +119,21 @@
             android:layout_height="40dp"
             android:background="@drawable/shape_radius_blue_btn_bg"
             android:gravity="center"
-            android:textColor="@color/white_ffffff"
-            android:textSize="15sp"
+            android:minWidth="70dp"
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
-            android:minWidth="70dp"
+            android:text="All"
+            android:textColor="@color/white_ffffff"
+            android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="@+id/tvDoorStatus1"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/tvDoorStatus1"
-            android:text="All" />
+            app:layout_constraintTop_toTopOf="@+id/tvDoorStatus1" />
 
         <View
             android:id="@+id/line3"
             style="@style/lw006_divider_line"
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
             app:layout_constraintTop_toBottomOf="@+id/tvDoorStatus1" />
 
         <TextView
@@ -138,6 +145,7 @@
             android:textColor="@color/black_333333"
             android:textSize="15sp"
             android:textStyle="bold"
+            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/line3" />
 
         <TextView
@@ -146,19 +154,21 @@
             android:layout_height="40dp"
             android:background="@drawable/shape_radius_blue_btn_bg"
             android:gravity="center"
+            android:minWidth="70dp"
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
+            android:text="All"
             android:textColor="@color/white_ffffff"
             android:textSize="15sp"
-            android:minWidth="70dp"
             app:layout_constraintBottom_toBottomOf="@+id/tvSensorSensitivity1"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/tvSensorSensitivity1"
-            android:text="All" />
+            app:layout_constraintTop_toTopOf="@+id/tvSensorSensitivity1" />
 
         <View
             android:id="@+id/line4"
             style="@style/lw006_divider_line"
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
             app:layout_constraintTop_toBottomOf="@+id/tvSensorSensitivity1" />
 
         <TextView
@@ -170,6 +180,7 @@
             android:textColor="@color/black_333333"
             android:textSize="15sp"
             android:textStyle="bold"
+            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/line4" />
 
         <TextView
@@ -178,19 +189,21 @@
             android:layout_height="40dp"
             android:background="@drawable/shape_radius_blue_btn_bg"
             android:gravity="center"
+            android:minWidth="70dp"
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
+            android:text="All"
             android:textColor="@color/white_ffffff"
             android:textSize="15sp"
-            android:minWidth="70dp"
             app:layout_constraintBottom_toBottomOf="@+id/tvDetectionStatus1"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/tvDetectionStatus1"
-            android:text="All" />
+            app:layout_constraintTop_toTopOf="@+id/tvDetectionStatus1" />
 
         <View
             android:id="@+id/line5"
             style="@style/lw006_divider_line"
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
             app:layout_constraintTop_toBottomOf="@+id/tvDetectionStatus1" />
 
         <TextView
@@ -202,6 +215,7 @@
             android:textColor="@color/black_333333"
             android:textSize="15sp"
             android:textStyle="bold"
+            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/line5" />
 
         <LinearLayout
@@ -227,11 +241,11 @@
                 android:layout_marginLeft="12dp"
                 android:layout_marginRight="12dp"
                 android:layout_weight="1.0"
+                android:gravity="center"
                 android:hint="0~65535"
                 android:inputType="number"
                 android:maxLength="5"
                 android:paddingStart="5dp"
-                android:gravity="center"
                 android:textColor="@color/black_333333"
                 android:textColorHint="@color/grey_ebebeb"
                 android:textSize="15sp" />
@@ -250,10 +264,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="12dp"
                 android:layout_weight="1.0"
+                android:gravity="center"
                 android:hint="0~65535"
                 android:inputType="number"
                 android:maxLength="5"
-                android:gravity="center"
                 android:paddingStart="5dp"
                 android:textColor="@color/black_333333"
                 android:textColorHint="@color/grey_ebebeb"
@@ -263,6 +277,8 @@
         <View
             android:id="@+id/line6"
             style="@style/lw006_divider_line"
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
             android:layout_marginTop="12dp"
             app:layout_constraintTop_toBottomOf="@+id/layoutMajor" />
 
@@ -275,6 +291,7 @@
             android:textColor="@color/black_333333"
             android:textSize="15sp"
             android:textStyle="bold"
+            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/line6" />
 
         <LinearLayout
@@ -300,10 +317,10 @@
                 android:layout_marginLeft="12dp"
                 android:layout_marginRight="12dp"
                 android:layout_weight="1.0"
+                android:gravity="center"
                 android:hint="0~65535"
                 android:inputType="number"
                 android:maxLength="5"
-                android:gravity="center"
                 android:paddingStart="5dp"
                 android:textColor="@color/black_333333"
                 android:textColorHint="@color/grey_ebebeb"
@@ -323,10 +340,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="12dp"
                 android:layout_weight="1.0"
+                android:gravity="center"
                 android:hint="0~65535"
                 android:inputType="number"
                 android:maxLength="5"
-                android:gravity="center"
                 android:paddingStart="5dp"
                 android:textColor="@color/black_333333"
                 android:textColorHint="@color/grey_ebebeb"
