--- a/app/src/main/res/layout/lw006_activity_filter_other.xml
+++ b/app/src/main/res/layout/lw006_activity_filter_other.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -32,7 +32,6 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
-            android:clickable="true"
             android:onClick="onSave"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
@@ -43,7 +42,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/grey_f2f2f2">
-
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -63,17 +61,15 @@
                 android:paddingLeft="12dp"
                 android:paddingRight="12dp"
                 android:text="Other"
-                android:textStyle="bold"
                 android:textColor="@color/black_333333"
-                android:textSize="15sp" />
+                android:textSize="15sp"
+                android:textStyle="bold" />
 
             <View style="@style/lw006_divider_line" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:focusable="true"
-                android:focusableInTouchMode="true"
                 android:padding="10dp">
 
                 <TextView
@@ -91,7 +87,6 @@
                     android:id="@+id/iv_del"
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
-                    android:clickable="true"
                     android:onClick="onDel"
                     android:padding="12dp"
                     android:src="@drawable/lw006_ic_del"
@@ -103,7 +98,6 @@
                     android:id="@+id/iv_add"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:clickable="true"
                     android:onClick="onAdd"
                     android:padding="12dp"
                     android:src="@drawable/lw006_ic_add"
@@ -130,8 +124,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                tools:visibility="visible"
-                android:visibility="gone">
+                android:visibility="gone"
+                tools:visibility="visible">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -151,7 +145,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginRight="12dp"
                     android:background="@drawable/shape_radius_blue_btn_bg"
-                    android:clickable="true"
                     android:gravity="center"
                     android:minWidth="150dp"
                     android:onClick="onOtherRelationship"
