--- a/app/src/main/res/layout/lw006_activity_filter_raw_data_switch.xml
+++ b/app/src/main/res/layout/lw006_activity_filter_raw_data_switch.xml
@@ -43,7 +43,6 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:clickable="true"
                 android:onClick="onFilterByIBeacon">
 
                 <TextView
@@ -79,7 +78,6 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:clickable="true"
                 android:onClick="onFilterByUid">
 
                 <TextView
@@ -115,7 +113,6 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:clickable="true"
                 android:onClick="onFilterByUrl">
 
                 <TextView
@@ -151,7 +148,6 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:clickable="true"
                 android:onClick="onFilterByTlm">
 
                 <TextView
@@ -187,7 +183,6 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:clickable="true"
                 android:onClick="onFilterByBXPiBeacon">
 
                 <TextView
@@ -222,7 +217,6 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:clickable="true"
                 android:onClick="onFilterByBXPDevice">
 
                 <TextView
@@ -252,7 +246,6 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:clickable="true"
                 android:onClick="onFilterByBXPAcc">
 
                 <TextView
@@ -282,7 +275,6 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:clickable="true"
                 android:onClick="onFilterByBXPTH">
 
                 <TextView
@@ -311,7 +303,6 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:clickable="true"
                 android:onClick="onFilterByBXPButton">
 
                 <TextView
@@ -346,7 +337,6 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:clickable="true"
                 android:onClick="onFilterByBXPTag">
 
                 <TextView
@@ -364,11 +354,11 @@
                     android:id="@+id/tv_filter_by_bxp_tag"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="12dp"
                     android:layout_marginRight="12dp"
-                    android:drawableRight="@drawable/lw006_ic_arrow_right"
+                    android:drawableEnd="@drawable/lw006_ic_arrow_right"
                     android:drawablePadding="10dp"
                     android:gravity="center_vertical"
                     android:text="ON"
@@ -381,7 +371,6 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:clickable="true"
                 android:onClick="onFilterByMkPir">
 
                 <TextView
@@ -417,7 +406,6 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:clickable="true"
                 android:onClick="onFilterByOther">
 
                 <TextView
