--- a/app/src/main/res/layout/lw006_activity_man_down_detection.xml
+++ b/app/src/main/res/layout/lw006_activity_man_down_detection.xml
@@ -15,13 +15,11 @@
             android:id="@+id/tv_back"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:clickable="true"
             android:drawableLeft="@drawable/lw006_ic_back"
             android:drawablePadding="6dp"
             android:gravity="center_vertical"
             android:onClick="onBack"
             android:paddingLeft="16dp"
-            android:text=""
             android:textColor="@color/white_ffffff"
             android:textSize="15sp" />
 
@@ -39,7 +37,6 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
-            android:clickable="true"
             android:onClick="onSave"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
@@ -68,11 +65,14 @@
             android:text="Man Down Detection"
             android:textColor="@color/black_333333"
             android:textSize="15sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <View
             android:id="@+id/line1"
             style="@style/lw006_divider_line"
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
             app:layout_constraintTop_toBottomOf="@id/cb_man_down_detection" />
 
         <TextView
@@ -84,6 +84,7 @@
             android:textColor="@color/black_333333"
             android:textSize="15sp"
             android:textStyle="bold"
+            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/line1" />
 
         <EditText
@@ -118,6 +119,8 @@
         <View
             android:id="@+id/line3"
             style="@style/lw006_divider_line"
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
             app:layout_constraintTop_toBottomOf="@id/tvDetectionTimeout" />
 
         <TextView
@@ -129,6 +132,7 @@
             android:textColor="@color/black_333333"
             android:textSize="15sp"
             android:textStyle="bold"
+            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/line3" />
 
         <TextView
@@ -136,7 +140,6 @@
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:background="@drawable/shape_radius_blue_btn_bg"
-            android:clickable="true"
             android:gravity="center"
             android:minWidth="70dp"
             android:paddingStart="5dp"
@@ -151,6 +154,8 @@
         <View
             android:id="@+id/line4"
             style="@style/lw006_divider_line"
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
             app:layout_constraintTop_toBottomOf="@id/tv1" />
 
         <TextView
@@ -162,6 +167,7 @@
             android:textColor="@color/black_333333"
             android:textSize="15sp"
             android:textStyle="bold"
+            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/line4" />
 
         <EditText
@@ -173,7 +179,6 @@
             android:hint="10~600"
             android:inputType="number"
             android:maxLength="3"
-            android:text=""
             android:textColor="@color/black_333333"
             android:textColorHint="@color/grey_ebebeb"
             android:textSize="15sp"
