--- a/app/src/main/res/layout/lw006_activity_motion_mode.xml
+++ b/app/src/main/res/layout/lw006_activity_motion_mode.xml
@@ -82,41 +82,11 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <View
-                    android:id="@+id/line1"
-                    style="@style/lw006_divider_line"
-                    app:layout_constraintTop_toBottomOf="@id/cb_fix_on_start" />
-
-                <TextView
-                    android:id="@+id/tv1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="50dp"
-                    android:gravity="center_vertical"
-                    android:text="Number Of Fix On Start"
-                    android:textColor="@color/black_333333"
-                    android:textSize="15sp"
-                    android:textStyle="bold"
-                    app:layout_constraintTop_toBottomOf="@+id/line1" />
-
-                <EditText
-                    android:id="@+id/et_fix_on_start_number"
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:hint="1~255"
-                    android:inputType="number"
-                    android:maxLength="3"
-                    android:text=""
-                    android:textColor="@color/black_333333"
-                    android:textColorHint="@color/grey_ebebeb"
-                    android:textSize="15sp"
-                    app:layout_constraintBottom_toBottomOf="@+id/tv1"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/tv1" />
-
-                <View
                     android:id="@+id/line2"
                     style="@style/lw006_divider_line"
-                    app:layout_constraintTop_toBottomOf="@id/tv1" />
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dp"
+                    app:layout_constraintTop_toBottomOf="@id/cb_fix_on_start" />
 
                 <TextView
                     android:id="@+id/tv2"
@@ -127,6 +97,7 @@
                     android:textColor="@color/black_333333"
                     android:textSize="15sp"
                     android:textStyle="bold"
+                    app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/line2" />
 
                 <TextView
@@ -134,7 +105,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:background="@drawable/shape_radius_blue_btn_bg"
-                    android:clickable="true"
                     android:gravity="center"
                     android:minWidth="70dp"
                     android:onClick="selectPosStrategyStart"
@@ -177,6 +147,8 @@
                 <View
                     android:id="@+id/line3"
                     style="@style/lw006_divider_line"
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dp"
                     app:layout_constraintTop_toBottomOf="@id/cb_fix_in_trip" />
 
 
@@ -189,6 +161,7 @@
                     android:textColor="@color/black_333333"
                     android:textSize="15sp"
                     android:textStyle="bold"
+                    app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/line3" />
 
                 <EditText
@@ -200,7 +173,6 @@
                     android:hint="10~86400"
                     android:inputType="number"
                     android:maxLength="5"
-                    android:text=""
                     android:textColor="@color/black_333333"
                     android:textColorHint="@color/grey_ebebeb"
                     android:textSize="15sp"
@@ -224,6 +196,8 @@
                 <View
                     android:id="@+id/line4"
                     style="@style/lw006_divider_line"
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dp"
                     app:layout_constraintTop_toBottomOf="@id/tv3" />
 
                 <TextView
@@ -235,6 +209,7 @@
                     android:textColor="@color/black_333333"
                     android:textSize="15sp"
                     android:textStyle="bold"
+                    app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/line4" />
 
                 <TextView
@@ -242,7 +217,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:background="@drawable/shape_radius_blue_btn_bg"
-                    android:clickable="true"
                     android:gravity="center"
                     android:minWidth="70dp"
                     android:onClick="selectPosStrategyTrip"
@@ -285,6 +259,8 @@
                 <View
                     android:id="@+id/line5"
                     style="@style/lw006_divider_line"
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dp"
                     app:layout_constraintTop_toBottomOf="@id/cb_fix_on_end" />
 
                 <TextView
@@ -296,6 +272,7 @@
                     android:textColor="@color/black_333333"
                     android:textSize="15sp"
                     android:textStyle="bold"
+                    app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/line5" />
 
                 <EditText
@@ -307,7 +284,6 @@
                     android:hint="1~180"
                     android:inputType="number"
                     android:maxLength="3"
-                    android:text=""
                     android:textColor="@color/black_333333"
                     android:textColorHint="@color/grey_ebebeb"
                     android:textSize="15sp"
@@ -331,8 +307,9 @@
                 <View
                     android:id="@+id/line6"
                     style="@style/lw006_divider_line"
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dp"
                     app:layout_constraintTop_toBottomOf="@id/tv5" />
-
 
                 <TextView
                     android:id="@+id/tv6"
@@ -343,6 +320,7 @@
                     android:textColor="@color/black_333333"
                     android:textSize="15sp"
                     android:textStyle="bold"
+                    app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/line6" />
 
                 <EditText
@@ -353,7 +331,6 @@
                     android:hint="1~255"
                     android:inputType="number"
                     android:maxLength="3"
-                    android:text=""
                     android:textColor="@color/black_333333"
                     android:textColorHint="@color/grey_ebebeb"
                     android:textSize="15sp"
@@ -364,8 +341,9 @@
                 <View
                     android:id="@+id/line7"
                     style="@style/lw006_divider_line"
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dp"
                     app:layout_constraintTop_toBottomOf="@id/tv6" />
-
 
                 <TextView
                     android:id="@+id/tv7"
@@ -376,6 +354,7 @@
                     android:textColor="@color/black_333333"
                     android:textSize="15sp"
                     android:textStyle="bold"
+                    app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/line7" />
 
                 <EditText
@@ -387,7 +366,6 @@
                     android:hint="10~300"
                     android:inputType="number"
                     android:maxLength="3"
-                    android:text=""
                     android:textColor="@color/black_333333"
                     android:textColorHint="@color/grey_ebebeb"
                     android:textSize="15sp"
@@ -411,6 +389,8 @@
                 <View
                     android:id="@+id/line8"
                     style="@style/lw006_divider_line"
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dp"
                     app:layout_constraintTop_toBottomOf="@id/tv7" />
 
                 <TextView
@@ -422,6 +402,7 @@
                     android:textColor="@color/black_333333"
                     android:textSize="15sp"
                     android:textStyle="bold"
+                    app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/line8" />
 
                 <TextView
@@ -429,7 +410,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:background="@drawable/shape_radius_blue_btn_bg"
-                    android:clickable="true"
                     android:gravity="center"
                     android:minWidth="70dp"
                     android:onClick="selectPosStrategyEnd"
@@ -469,19 +449,21 @@
                 <View
                     android:id="@+id/line9"
                     style="@style/lw006_divider_line"
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dp"
                     app:layout_constraintTop_toBottomOf="@id/cb_fix_on_stationary_state" />
 
                 <TextView
                     android:id="@+id/tv9"
                     android:layout_width="0px"
                     android:layout_height="50dp"
+                    android:layout_marginRight="10dp"
                     android:gravity="center_vertical"
                     android:text="Report Interval On Stationary"
                     android:textColor="@color/black_333333"
                     android:textSize="15sp"
                     android:textStyle="bold"
                     app:layout_constraintLeft_toLeftOf="parent"
-                    android:layout_marginRight="10dp"
                     app:layout_constraintRight_toLeftOf="@+id/et_report_interval_on_stationary"
                     app:layout_constraintTop_toBottomOf="@+id/line9" />
 
@@ -516,6 +498,8 @@
                 <View
                     android:id="@+id/line10"
                     style="@style/lw006_divider_line"
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dp"
                     app:layout_constraintTop_toBottomOf="@id/tv9" />
 
                 <TextView
@@ -527,6 +511,7 @@
                     android:textColor="@color/black_333333"
                     android:textSize="15sp"
                     android:textStyle="bold"
+                    app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/line10" />
 
                 <TextView
@@ -534,7 +519,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:background="@drawable/shape_radius_blue_btn_bg"
-                    android:clickable="true"
                     android:gravity="center"
                     android:minWidth="70dp"
                     android:onClick="selectPosStrategyStationary"
@@ -568,11 +552,14 @@
                     android:text="Notify Event On Start"
                     android:textColor="@color/black_333333"
                     android:textSize="15sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <View
                     android:id="@+id/line11"
                     style="@style/lw006_divider_line"
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dp"
                     app:layout_constraintTop_toBottomOf="@id/cb_notify_on_start" />
 
                 <CheckBox
@@ -590,6 +577,8 @@
                 <View
                     android:id="@+id/line12"
                     style="@style/lw006_divider_line"
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dp"
                     app:layout_constraintTop_toBottomOf="@id/cb_notify_in_trip" />
 
                 <CheckBox
