--- a/app/src/main/res/layout/lw006_activity_periodic_mode.xml
+++ b/app/src/main/res/layout/lw006_activity_periodic_mode.xml
@@ -15,13 +15,11 @@
             android:id="@+id/tv_back"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:clickable="true"
             android:drawableLeft="@drawable/lw006_ic_back"
             android:drawablePadding="6dp"
             android:gravity="center_vertical"
             android:onClick="onBack"
             android:paddingLeft="16dp"
-            android:text=""
             android:textColor="@color/white_ffffff"
             android:textSize="15sp" />
 
@@ -39,7 +37,6 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
-            android:clickable="true"
             android:onClick="onSave"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
@@ -74,7 +71,6 @@
             android:layout_width="wrap_content"
             android:layout_height="45dp"
             android:background="@drawable/shape_radius_blue_btn_bg"
-            android:clickable="true"
             android:gravity="center"
             android:minWidth="70dp"
             android:onClick="selectPosStrategy"
@@ -89,6 +85,8 @@
         <View
             android:id="@+id/line1"
             style="@style/lw006_divider_line"
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
             app:layout_constraintTop_toBottomOf="@id/tv1" />
 
         <TextView
