--- a/app/src/main/res/layout/lw006_activity_pos_wifi.xml
+++ b/app/src/main/res/layout/lw006_activity_pos_wifi.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/white_ffffff"
     android:orientation="vertical">
 
@@ -16,7 +16,6 @@
             android:id="@+id/tv_back"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:clickable="true"
             android:drawableLeft="@drawable/lw006_ic_back"
             android:drawablePadding="6dp"
             android:gravity="center_vertical"
@@ -40,14 +39,12 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
-            android:clickable="true"
             android:onClick="onSave"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
             android:src="@drawable/lw006_ic_save" />
 
     </RelativeLayout>
-
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -66,7 +63,8 @@
             android:textColor="@color/black_333333"
             android:textSize="15sp"
             android:textStyle="bold"
-            app:layout_constraintLeft_toLeftOf="parent" />
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
             android:id="@+id/et_pos_timeout"
@@ -115,6 +113,7 @@
             android:textColor="@color/black_333333"
             android:textSize="15sp"
             android:textStyle="bold"
+            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/line1" />
 
         <EditText
@@ -141,40 +140,6 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/et_bssid_number" />
 
-
-        <TextView
-            android:id="@+id/wifiDataType"
-            android:layout_width="wrap_content"
-            android:layout_height="55dp"
-            android:gravity="center_vertical"
-            android:text="WIFI Data Type"
-            android:textColor="@color/black_333333"
-            android:textSize="15sp"
-            android:textStyle="bold"
-            app:layout_constraintTop_toBottomOf="@+id/line2" />
-
-        <TextView
-            android:id="@+id/tv_wifi_data_type"
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            android:background="@drawable/shape_radius_blue_btn_bg"
-            android:gravity="center"
-            android:onClick="onWifiDataType"
-            android:text="DAS"
-            android:textColor="@color/white_ffffff"
-            android:textSize="15sp"
-            app:layout_constraintBottom_toBottomOf="@+id/wifiDataType"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/wifiDataType" />
-
-        <View
-            android:id="@+id/line3"
-            style="@style/lw006_divider_line"
-            android:layout_width="0dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/wifiDataType" />
-
         <TextView
             android:id="@+id/tvWifiFix"
             android:layout_width="wrap_content"
@@ -184,7 +149,8 @@
             android:textColor="@color/black_333333"
             android:textSize="15sp"
             android:textStyle="bold"
-            app:layout_constraintTop_toBottomOf="@+id/line3" />
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/line2" />
 
         <TextView
             android:id="@+id/tvWifiFixMechanism"
@@ -192,19 +158,90 @@
             android:layout_height="40dp"
             android:background="@drawable/shape_radius_blue_btn_bg"
             android:gravity="center"
-            tools:text="RSSI Priority"
             android:textColor="@color/white_ffffff"
             android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="@+id/tvWifiFix"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/tvWifiFix" />
+            app:layout_constraintTop_toTopOf="@+id/tvWifiFix"
+            tools:text="RSSI Priority" />
 
         <View
+            android:id="@+id/line3"
             style="@style/lw006_divider_line"
             android:layout_width="0dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvWifiFix" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            app:layout_constraintTop_toBottomOf="@+id/line3">
+
+            <TextView
+                android:id="@+id/rssi_1m"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="RSSI Filter"
+                android:textColor="@color/black_333333"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@id/sb_rssi_filter"
+                app:layout_constraintLeft_toLeftOf="parent" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:text="(-127dBm~0dBm)"
+                android:textColor="@color/grey_b3b3b3"
+                android:textSize="12sp"
+                app:layout_constraintBottom_toTopOf="@id/sb_rssi_filter"
+                app:layout_constraintLeft_toRightOf="@id/rssi_1m" />
+
+            <SeekBar
+                android:id="@+id/sb_rssi_filter"
+                style="@style/LW006CustomSeekbarStyle"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="20dp"
+                android:max="127"
+                android:maxHeight="2dp"
+                android:minHeight="2dp"
+                android:paddingStart="0dp"
+                android:paddingEnd="0dp"
+                android:progress="0"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toLeftOf="@id/tv_rssi_filter_value"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/tv_rssi_filter_value"
+                android:layout_width="70dp"
+                android:layout_height="wrap_content"
+                android:gravity="right"
+                android:text="-127dBm"
+                android:textColor="@color/black_333333"
+                android:textSize="15sp"
+
+                app:layout_constraintBottom_toBottomOf="@id/sb_rssi_filter"
+                app:layout_constraintLeft_toRightOf="@id/sb_rssi_filter"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="@id/sb_rssi_filter" />
+
+            <TextView
+                android:id="@+id/tv_rssi_filter_tips"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/wifi_fix_filter"
+                android:textColor="@color/black_333333"
+                android:textSize="12sp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/sb_rssi_filter" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
