--- a/app/src/main/res/layout/lw006_activity_indicator_settings.xml
+++ b/app/src/main/res/layout/lw006_activity_indicator_settings.xml
@@ -14,13 +14,11 @@
             android:id="@+id/tv_back"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:clickable="true"
             android:drawableLeft="@drawable/lw006_ic_back"
             android:drawablePadding="6dp"
             android:gravity="center_vertical"
             android:onClick="onBack"
             android:paddingLeft="16dp"
-            android:text=""
             android:textColor="@color/white_ffffff"
             android:textSize="15sp" />
 
@@ -38,7 +36,6 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
-            android:clickable="true"
             android:onClick="onSave"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
@@ -56,162 +53,149 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <LinearLayout
+            <CheckBox
+                android:id="@+id/cbDeviceState"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="10dp"
                 android:background="@color/white_ffffff"
-                android:orientation="vertical"
+                android:button="@null"
+                android:checked="true"
+                android:drawableRight="@drawable/selector_cb_btn"
                 android:paddingStart="10dp"
-                android:paddingEnd="10dp">
+                android:paddingEnd="10dp"
+                android:text="Device State"
+                android:textColor="@color/black_333333"
+                android:textSize="15sp"
+                android:textStyle="bold" />
 
-                <CheckBox
-                    android:id="@+id/cbDeviceState"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:button="@null"
-                    android:checked="true"
-                    android:drawableRight="@drawable/selector_cb_btn"
-                    android:text="Device State"
-                    android:textColor="@color/black_333333"
-                    android:textSize="15sp"
-                    android:textStyle="bold" />
-
-                <View style="@style/lw006_divider_line" />
-
-                <CheckBox
-                    android:id="@+id/cb_low_power"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:button="@null"
-                    android:checked="true"
-                    android:drawableRight="@drawable/selector_cb_btn"
-                    android:text="Low-power"
-                    android:textColor="@color/black_333333"
-                    android:textSize="15sp"
-                    android:textStyle="bold" />
-
-                <View style="@style/lw006_divider_line" />
-
-                <CheckBox
-                    android:id="@+id/cbCharging"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:button="@null"
-                    android:checked="true"
-                    android:drawableRight="@drawable/selector_cb_btn"
-                    android:text="Charging"
-                    android:textColor="@color/black_333333"
-                    android:textSize="15sp"
-                    android:textStyle="bold" />
-
-                <View style="@style/lw006_divider_line" />
-
-                <CheckBox
-                    android:id="@+id/cbFullCharge"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:button="@null"
-                    android:checked="true"
-                    android:drawableRight="@drawable/selector_cb_btn"
-                    android:text="Full Charge"
-                    android:textColor="@color/black_333333"
-                    android:textSize="15sp"
-                    android:textStyle="bold" />
-
-            </LinearLayout>
-
-            <LinearLayout
+            <CheckBox
+                android:id="@+id/cb_low_power"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="1dp"
+                android:layout_marginRight="10dp"
+                android:background="@color/white_ffffff"
+                android:button="@null"
+                android:checked="true"
+                android:drawableRight="@drawable/selector_cb_btn"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
+                android:text="Low-power"
+                android:textColor="@color/black_333333"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+
+            <CheckBox
+                android:id="@+id/cbCharging"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="1dp"
+                android:layout_marginRight="10dp"
+                android:background="@color/white_ffffff"
+                android:button="@null"
+                android:checked="true"
+                android:drawableRight="@drawable/selector_cb_btn"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
+                android:text="Charging"
+                android:textColor="@color/black_333333"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+
+            <CheckBox
+                android:id="@+id/cbFullCharge"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="1dp"
+                android:layout_marginRight="10dp"
+                android:background="@color/white_ffffff"
+                android:button="@null"
+                android:checked="true"
+                android:drawableRight="@drawable/selector_cb_btn"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
+                android:text="Full Charge"
+                android:textColor="@color/black_333333"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+
+            <CheckBox
+                android:id="@+id/cbBleConnection"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="10dp"
                 android:background="@color/white_ffffff"
-                android:orientation="vertical"
+                android:button="@null"
+                android:checked="true"
+                android:drawableRight="@drawable/selector_cb_btn"
                 android:paddingStart="10dp"
-                android:paddingEnd="10dp">
+                android:paddingEnd="10dp"
+                android:text="Bluetooth Connection"
+                android:textColor="@color/black_333333"
+                android:textSize="15sp"
+                android:textStyle="bold" />
 
-                <CheckBox
-                    android:id="@+id/cbBleConnection"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:button="@null"
-                    android:checked="true"
-                    android:drawableRight="@drawable/selector_cb_btn"
-                    android:text="Bluetooth Connection"
-                    android:textColor="@color/black_333333"
-                    android:textSize="15sp"
-                    android:textStyle="bold" />
-
-                <View style="@style/lw006_divider_line" />
-
-                <CheckBox
-                    android:id="@+id/cbNetworkCheck"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:button="@null"
-                    android:checked="true"
-                    android:drawableRight="@drawable/selector_cb_btn"
-                    android:text="Network Check"
-                    android:textColor="@color/black_333333"
-                    android:textSize="15sp"
-                    android:textStyle="bold" />
-            </LinearLayout>
-
-            <LinearLayout
+            <CheckBox
+                android:id="@+id/cbInfix"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="10dp"
                 android:background="@color/white_ffffff"
-                android:orientation="vertical"
+                android:button="@null"
+                android:checked="true"
+                android:drawableRight="@drawable/selector_cb_btn"
                 android:paddingStart="10dp"
-                android:paddingEnd="10dp">
+                android:paddingEnd="10dp"
+                android:text="In  Fix"
+                android:textColor="@color/black_333333"
+                android:textSize="15sp"
+                android:textStyle="bold" />
 
-                <CheckBox
-                    android:id="@+id/cbInfix"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:button="@null"
-                    android:checked="true"
-                    android:drawableRight="@drawable/selector_cb_btn"
-                    android:text="In  Fix"
-                    android:textColor="@color/black_333333"
-                    android:textSize="15sp"
-                    android:textStyle="bold" />
+            <CheckBox
+                android:id="@+id/cbFixSuccessful"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="1dp"
+                android:layout_marginRight="10dp"
+                android:background="@color/white_ffffff"
+                android:button="@null"
+                android:checked="true"
+                android:drawableRight="@drawable/selector_cb_btn"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
+                android:text="Fix Successful"
+                android:textColor="@color/black_333333"
+                android:textSize="15sp"
+                android:textStyle="bold" />
 
-                <View style="@style/lw006_divider_line" />
-
-                <CheckBox
-                    android:id="@+id/cbFixSuccessful"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:button="@null"
-                    android:checked="true"
-                    android:drawableRight="@drawable/selector_cb_btn"
-                    android:text="Fix Successful"
-                    android:textColor="@color/black_333333"
-                    android:textSize="15sp"
-                    android:textStyle="bold" />
-
-                <View style="@style/lw006_divider_line" />
-
-                <CheckBox
-                    android:id="@+id/cbFailToFix"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:button="@null"
-                    android:checked="true"
-                    android:drawableRight="@drawable/selector_cb_btn"
-                    android:text="Fail To Fix"
-                    android:textColor="@color/black_333333"
-                    android:textSize="15sp"
-                    android:textStyle="bold" />
-            </LinearLayout>
+            <CheckBox
+                android:id="@+id/cbFailToFix"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="1dp"
+                android:layout_marginRight="10dp"
+                android:background="@color/white_ffffff"
+                android:button="@null"
+                android:checked="true"
+                android:drawableRight="@drawable/selector_cb_btn"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
+                android:text="Fail To Fix"
+                android:textColor="@color/black_333333"
+                android:textSize="15sp"
+                android:textStyle="bold" />
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 </LinearLayout>
