--- a/app/src/main/res/layout/lw006_activity_selftest.xml
+++ b/app/src/main/res/layout/lw006_activity_selftest.xml
@@ -36,7 +36,7 @@
             android:textStyle="bold" />
     </RelativeLayout>
 
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -65,6 +65,7 @@
                     android:textStyle="bold"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
+
 
                 <TextView
                     android:id="@+id/tv_selftest_status"
@@ -97,14 +98,13 @@
                     android:id="@+id/tv_axis_status"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
                     android:gravity="center_vertical"
                     android:text="2"
                     android:textColor="@color/black_333333"
                     android:textSize="15sp"
                     android:visibility="gone"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="@id/tv_flash_status"
+                    app:layout_constraintLeft_toRightOf="@+id/tv_gps_status"
+                    app:layout_constraintRight_toLeftOf="@+id/tv_flash_status"
                     app:layout_constraintTop_toBottomOf="@id/selftest_status"
                     tools:visibility="visible" />
 
@@ -112,16 +112,29 @@
                     android:id="@+id/tv_flash_status"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
                     android:gravity="center_vertical"
                     android:text="3"
                     android:textColor="@color/black_333333"
                     android:textSize="15sp"
                     android:visibility="gone"
                     app:layout_constraintLeft_toRightOf="@id/selftest_status"
+                    app:layout_constraintRight_toLeftOf="@+id/tv_nb_status"
                     app:layout_constraintTop_toBottomOf="@id/selftest_status"
                     tools:visibility="visible" />
 
+                <TextView
+                    android:id="@+id/tv_nb_status"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:text="4"
+                    android:textColor="@color/black_333333"
+                    android:textSize="15sp"
+                    android:visibility="gone"
+                    app:layout_constraintLeft_toRightOf="@id/tv_flash_status"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/selftest_status"
+                    tools:visibility="visible" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -156,194 +169,6 @@
                     android:visibility="visible"
                     app:layout_constraintBaseline_toBaselineOf="@id/pcba_status"
                     app:layout_constraintLeft_toRightOf="@id/pcba_status" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="55dp"
-                android:layout_marginTop="10dp"
-                android:background="@color/white_ffffff"
-                android:orientation="horizontal"
-                android:paddingStart="10dp"
-                android:paddingEnd="10dp">
-
-                <TextView
-                    android:layout_width="0px"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical"
-                    android:text="GPS Positioning"
-                    android:textColor="@color/black_333333"
-                    android:textSize="15sp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/tvGpsType"
-                    android:layout_width="wrap_content"
-                    android:layout_height="45dp"
-                    android:background="@drawable/shape_radius_blue_btn_bg"
-                    android:gravity="center_vertical"
-                    android:paddingStart="10dp"
-                    android:paddingEnd="10dp"
-                    android:textColor="@color/white_ffffff"
-                    android:textSize="15sp"
-                    tools:text="LR1110" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:background="@color/white_ffffff"
-                android:orientation="vertical"
-                android:padding="10dp">
-
-                <TextView
-                    android:id="@+id/battery_info"
-                    android:layout_width="wrap_content"
-                    android:layout_height="40dp"
-                    android:gravity="center_vertical"
-                    android:text="Battery information:"
-                    android:textColor="@color/black_333333"
-                    android:textSize="15sp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/tv_runtime"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:textColor="@color/black_333333"
-                    android:textSize="13sp"
-                    tools:text="12121212312" />
-
-                <TextView
-                    android:id="@+id/tv_adv_times"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:gravity="center_vertical"
-                    android:textColor="@color/black_333333"
-                    android:textSize="13sp"
-                    tools:text="12121212312" />
-
-                <TextView
-                    android:id="@+id/tv_flash_times"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:gravity="center_vertical"
-                    android:textColor="@color/black_333333"
-                    android:textSize="13sp"
-                    tools:text="12121212312" />
-
-                <TextView
-                    android:id="@+id/tv_axis_duration"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:gravity="center_vertical"
-                    android:textColor="@color/black_333333"
-                    android:textSize="13sp"
-                    tools:text="12121212312" />
-
-                <TextView
-                    android:id="@+id/tv_ble_fix_duration"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:gravity="center_vertical"
-                    android:textColor="@color/black_333333"
-                    android:textSize="13sp"
-                    tools:text="12121212312" />
-
-                <TextView
-                    android:id="@+id/tv_wifi_fix_duration"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:gravity="center_vertical"
-                    android:textColor="@color/black_333333"
-                    android:textSize="13sp"
-                    tools:text="12121212312" />
-
-                <TextView
-                    android:id="@+id/tv_gps_fix_duration"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:gravity="center_vertical"
-                    android:textColor="@color/black_333333"
-                    android:textSize="13sp"
-                    tools:text="12121212312" />
-
-                <TextView
-                    android:id="@+id/tv_lora_transmission_times"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:gravity="center_vertical"
-                    android:textColor="@color/black_333333"
-                    android:textSize="13sp"
-                    tools:text="12121212312" />
-
-                <TextView
-                    android:id="@+id/tv_lora_power"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:gravity="center_vertical"
-                    android:textColor="@color/black_333333"
-                    android:textSize="13sp"
-                    tools:text="12121212312" />
-            </LinearLayout>
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/cl_battery_reset"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:background="@color/white_ffffff"
-                android:padding="10dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Battery Reset"
-                    android:textColor="@color/black_333333"
-                    android:textSize="15sp"
-                    android:textStyle="bold"
-                    app:layout_constraintBottom_toBottomOf="@id/tv_battery_reset"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toTopOf="@id/tv_battery_reset" />
-
-                <TextView
-                    android:id="@+id/tv_battery_reset"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/shape_radius_blue_btn_bg"
-                    android:clickable="true"
-                    android:gravity="center"
-                    android:minWidth="70dp"
-                    android:onClick="onBatteryReset"
-                    android:padding="12dp"
-                    android:text="Reset"
-                    android:textColor="@color/white_ffffff"
-                    android:textSize="15sp"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:paddingTop="6dp"
-                    android:paddingBottom="6dp"
-                    android:text="@string/battery_reset_tips"
-                    android:textColor="@color/black_333333"
-                    android:textSize="12sp"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tv_battery_reset" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <LinearLayout
@@ -409,35 +234,6 @@
                         android:textSize="15sp" />
                 </LinearLayout>
             </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="55dp"
-                android:layout_marginTop="10dp"
-                android:background="@color/white_ffffff"
-                android:orientation="horizontal"
-                android:paddingStart="10dp"
-                android:paddingEnd="10dp">
-
-                <TextView
-                    android:layout_width="0px"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical"
-                    android:text="HW Version"
-                    android:textColor="@color/black_333333"
-                    android:textSize="15sp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/tvHwVersion"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:gravity="center_vertical"
-                    android:textColor="@color/black_333333"
-                    android:textSize="15sp"
-                    tools:text="Traditional GPS module Supported" />
-            </LinearLayout>
         </LinearLayout>
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 </LinearLayout>
