--- a/app/src/main/res/layout/lw006_fragment_device.xml
+++ b/app/src/main/res/layout/lw006_fragment_device.xml
@@ -44,6 +44,40 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center_vertical"
+                android:text="MQTT Data Format"
+                android:textColor="@color/black_333333"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tvDataFormat"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:background="@drawable/shape_radius_blue_btn_bg"
+                android:gravity="center"
+                android:minWidth="70dp"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
+                android:text="JSON"
+                android:textColor="@color/white_ffffff"
+                android:textSize="15sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginTop="10dp"
+            android:background="@color/white_ffffff"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp">
+
+            <TextView
+                android:layout_width="0px"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
                 android:text="Current Time Zone"
                 android:textColor="@color/black_333333"
                 android:textSize="15sp"
@@ -232,7 +266,6 @@
             android:layout_height="50dp"
             android:layout_marginTop="10dp"
             android:background="@color/white_ffffff"
-            android:clickable="true"
             android:drawableRight="@drawable/lw006_ic_arrow_right"
             android:gravity="center_vertical"
             android:onClick="onIndicatorSettings"
@@ -244,12 +277,26 @@
             android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/tvNtpServerSetting"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginTop="10dp"
+            android:background="@color/white_ffffff"
+            android:drawableRight="@drawable/lw006_ic_arrow_right"
+            android:gravity="center_vertical"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
+            android:text="NTP Server Settings"
+            android:textColor="@color/black_333333"
+            android:textSize="15sp"
+            android:textStyle="bold" />
+
+        <TextView
             android:id="@+id/tv_factory_reset"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="10dp"
             android:background="@color/white_ffffff"
-            android:clickable="true"
             android:drawableRight="@drawable/lw006_ic_arrow_right"
             android:gravity="center_vertical"
             android:onClick="onFactoryReset"
@@ -266,7 +313,6 @@
             android:layout_height="50dp"
             android:layout_marginTop="10dp"
             android:background="@color/white_ffffff"
-            android:clickable="true"
             android:drawableRight="@drawable/lw006_ic_arrow_right"
             android:gravity="center_vertical"
             android:onClick="onDeviceInfo"
