--- a/app/src/main/res/layout/ps101m_activity_filter_ibeacon.xml
+++ b/app/src/main/res/layout/ps101m_activity_filter_ibeacon.xml
@@ -68,7 +68,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <View
-            style="@style/lw006_divider_line"
+            style="@style/divider_line"
             android:layout_width="0dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -105,7 +105,7 @@
             app:layout_constraintTop_toBottomOf="@id/ibeacon_uuid" />
 
         <View
-            style="@style/lw006_divider_line"
+            style="@style/divider_line"
             android:layout_width="0dp"
             android:layout_marginTop="10dp"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -187,7 +187,7 @@
         </LinearLayout>
 
         <View
-            style="@style/lw006_divider_line"
+            style="@style/divider_line"
             android:layout_width="0dp"
             android:layout_marginTop="10dp"
             app:layout_constraintLeft_toLeftOf="parent"
