--- a/app/src/main/res/layout/ps101m_activity_timing_mode.xml
+++ b/app/src/main/res/layout/ps101m_activity_timing_mode.xml
@@ -78,7 +78,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <View
-            style="@style/lw006_divider_line"
+            style="@style/divider_line"
             android:layout_width="0dp"
             android:layout_marginTop="10dp"
             app:layout_constraintLeft_toLeftOf="parent"
