--- a/app/src/main/res/layout/ps101m_item_log_data.xml
+++ b/app/src/main/res/layout/ps101m_item_log_data.xml
@@ -34,6 +34,6 @@
 
     </LinearLayout>
 
-    <View style="@style/lw006_divider_line" />
+    <View style="@style/divider_line" />
 
 </LinearLayout>
