--- a/app/src/main/res/layout/activity_ntp_sever_setting.xml
+++ b/app/src/main/res/layout/activity_ntp_sever_setting.xml
@@ -109,7 +109,7 @@
 
         <View
             android:id="@+id/line1"
-            style="@style/lw006_divider_line"
+            style="@style/divider_line"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:layout_marginTop="10dp"
