--- a/app/src/main/res/layout/dialog_alert.xml
+++ b/app/src/main/res/layout/dialog_alert.xml
@@ -30,7 +30,7 @@
                 android:textColor="@color/black_4d4d4d"
                 android:textSize="16sp" />
 
-            <View style="@style/lw006_divider_line" />
+            <View style="@style/divider_line" />
         </LinearLayout>
 
         <TextView
@@ -45,7 +45,7 @@
             android:textColor="@color/black_4d4d4d"
             android:textSize="16sp" />
 
-        <View style="@style/lw006_divider_line" />
+        <View style="@style/divider_line" />
 
         <LinearLayout
             android:layout_width="match_parent"
