--- a/app/src/main/res/layout/ps101m_activity_alarm_function.xml
+++ b/app/src/main/res/layout/ps101m_activity_alarm_function.xml
@@ -80,7 +80,7 @@
 
         <View
             android:id="@+id/line1"
-            style="@style/lw006_divider_line"
+            style="@style/divider_line"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             app:layout_constraintTop_toBottomOf="@id/tv1" />
@@ -138,7 +138,7 @@
 
         <View
             android:id="@+id/line2"
-            style="@style/lw006_divider_line"
+            style="@style/divider_line"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             app:layout_constraintTop_toBottomOf="@id/tv2" />
@@ -157,7 +157,7 @@
 
         <View
             android:id="@+id/line3"
-            style="@style/lw006_divider_line"
+            style="@style/divider_line"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             app:layout_constraintTop_toBottomOf="@id/tvAlertAlarmSetting" />
