--- a/app/src/main/res/layout/ps101m_activity_axis_setting.xml
+++ b/app/src/main/res/layout/ps101m_activity_axis_setting.xml
@@ -101,7 +101,7 @@
             app:layout_constraintTop_toTopOf="@id/et_wakeup_threshold" />
 
         <View
-            style="@style/lw006_divider_line"
+            style="@style/divider_line"
             android:layout_width="0dp"
             android:layout_marginTop="10dp"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -152,7 +152,7 @@
             app:layout_constraintTop_toTopOf="@id/et_wakeup_duration" />
 
         <View
-            style="@style/lw006_divider_line"
+            style="@style/divider_line"
             android:layout_width="0dp"
             android:layout_marginTop="10dp"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -202,7 +202,7 @@
             app:layout_constraintTop_toTopOf="@id/et_motion_threshold" />
 
         <View
-            style="@style/lw006_divider_line"
+            style="@style/divider_line"
             android:layout_width="0dp"
             android:layout_marginTop="10dp"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -251,7 +251,7 @@
             app:layout_constraintTop_toTopOf="@id/et_motion_duration" />
 
         <View
-            style="@style/lw006_divider_line"
+            style="@style/divider_line"
             android:layout_width="0dp"
             android:layout_marginTop="10dp"
             app:layout_constraintLeft_toLeftOf="parent"
