--- a/app/src/main/res/layout/ps101m_activity_ble_settings.xml
+++ b/app/src/main/res/layout/ps101m_activity_ble_settings.xml
@@ -86,7 +86,7 @@
 
         <View
             android:id="@+id/line1"
-            style="@style/lw006_divider_line"
+            style="@style/divider_line"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             app:layout_constraintTop_toBottomOf="@id/tv1" />
@@ -187,7 +187,7 @@
 
         <View
             android:id="@+id/line2"
-            style="@style/lw006_divider_line"
+            style="@style/divider_line"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             app:layout_constraintTop_toBottomOf="@id/tv3" />
@@ -218,7 +218,7 @@
 
         <View
             android:id="@+id/line3"
-            style="@style/lw006_divider_line"
+            style="@style/divider_line"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             app:layout_constraintTop_toBottomOf="@id/tv4" />
@@ -275,7 +275,7 @@
 
         <SeekBar
             android:id="@+id/sb_tx_power"
-            style="@style/LW006CustomSeekbarStyle"
+            style="@style/CustomSeekbarStyle"
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:max="13"
