--- a/app/src/main/res/layout/ps101m_activity_device_mode.xml
+++ b/app/src/main/res/layout/ps101m_activity_device_mode.xml
@@ -73,7 +73,7 @@
 
         <View
             android:id="@+id/line1"
-            style="@style/lw006_divider_line"
+            style="@style/divider_line"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             app:layout_constraintTop_toBottomOf="@id/tvDeviceMode1" />
@@ -92,7 +92,7 @@
 
         <View
             android:id="@+id/line4"
-            style="@style/lw006_divider_line"
+            style="@style/divider_line"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             app:layout_constraintTop_toBottomOf="@id/tv_standby_mode" />
@@ -112,7 +112,7 @@
 
         <View
             android:id="@+id/line2"
-            style="@style/lw006_divider_line"
+            style="@style/divider_line"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             app:layout_constraintTop_toBottomOf="@id/tv_timing_mode" />
@@ -132,7 +132,7 @@
 
         <View
             android:id="@+id/line3"
-            style="@style/lw006_divider_line"
+            style="@style/divider_line"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             app:layout_constraintTop_toBottomOf="@id/tv_periodic_mode" />
