--- a/app/src/main/res/layout/ps101m_activity_filter_mac.xml
+++ b/app/src/main/res/layout/ps101m_activity_filter_mac.xml
@@ -68,7 +68,7 @@
                 android:textSize="15sp"
                 android:textStyle="bold" />
 
-            <View style="@style/lw006_divider_line" />
+            <View style="@style/divider_line" />
 
             <CheckBox
                 android:id="@+id/cb_reverse_filter"
@@ -84,7 +84,7 @@
                 android:textSize="15sp"
                 android:textStyle="bold" />
 
-            <View style="@style/lw006_divider_line" />
+            <View style="@style/divider_line" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
