--- a/app/src/main/res/layout/ps101m_activity_filter_mkpir.xml
+++ b/app/src/main/res/layout/ps101m_activity_filter_mkpir.xml
@@ -61,7 +61,7 @@
 
         <View
             android:id="@+id/line1"
-            style="@style/lw006_divider_line"
+            style="@style/divider_line"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             app:layout_constraintTop_toBottomOf="@+id/cbMkPir" />
@@ -96,7 +96,7 @@
 
         <View
             android:id="@+id/line2"
-            style="@style/lw006_divider_line"
+            style="@style/divider_line"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             app:layout_constraintTop_toBottomOf="@+id/tvDelayResStatus1" />
@@ -131,7 +131,7 @@
 
         <View
             android:id="@+id/line3"
-            style="@style/lw006_divider_line"
+            style="@style/divider_line"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             app:layout_constraintTop_toBottomOf="@+id/tvDoorStatus1" />
@@ -166,7 +166,7 @@
 
         <View
             android:id="@+id/line4"
-            style="@style/lw006_divider_line"
+            style="@style/divider_line"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             app:layout_constraintTop_toBottomOf="@+id/tvSensorSensitivity1" />
@@ -201,7 +201,7 @@
 
         <View
             android:id="@+id/line5"
-            style="@style/lw006_divider_line"
+            style="@style/divider_line"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             app:layout_constraintTop_toBottomOf="@+id/tvDetectionStatus1" />
@@ -276,7 +276,7 @@
 
         <View
             android:id="@+id/line6"
-            style="@style/lw006_divider_line"
+            style="@style/divider_line"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:layout_marginTop="12dp"
