--- a/app/src/main/res/layout/ps101m_activity_filter_uid.xml
+++ b/app/src/main/res/layout/ps101m_activity_filter_uid.xml
@@ -70,7 +70,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <View
-            style="@style/lw006_divider_line"
+            style="@style/divider_line"
             android:layout_width="0dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -107,7 +107,7 @@
             app:layout_constraintTop_toBottomOf="@id/uid_namespace_id" />
 
         <View
-            style="@style/lw006_divider_line"
+            style="@style/divider_line"
             android:layout_width="0dp"
             android:layout_marginTop="10dp"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -145,7 +145,7 @@
             app:layout_constraintTop_toBottomOf="@id/uid_instance_id" />
 
         <View
-            style="@style/lw006_divider_line"
+            style="@style/divider_line"
             android:layout_width="0dp"
             android:layout_marginTop="10dp"
             app:layout_constraintLeft_toLeftOf="parent"
