--- a/app/src/main/res/layout/ps101m_activity_filter_url.xml
+++ b/app/src/main/res/layout/ps101m_activity_filter_url.xml
@@ -67,7 +67,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <View
-            style="@style/lw006_divider_line"
+            style="@style/divider_line"
             android:layout_width="0dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -102,7 +102,7 @@
             app:layout_constraintTop_toBottomOf="@id/url" />
 
         <View
-            style="@style/lw006_divider_line"
+            style="@style/divider_line"
             android:layout_width="0dp"
             android:layout_marginTop="10dp"
             app:layout_constraintLeft_toLeftOf="parent"
