--- a/app/src/main/res/layout/ps101m_activity_man_down_detection.xml
+++ b/app/src/main/res/layout/ps101m_activity_man_down_detection.xml
@@ -70,7 +70,7 @@
 
         <View
             android:id="@+id/line1"
-            style="@style/lw006_divider_line"
+            style="@style/divider_line"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             app:layout_constraintTop_toBottomOf="@id/cb_man_down_detection" />
@@ -118,7 +118,7 @@
 
         <View
             android:id="@+id/line3"
-            style="@style/lw006_divider_line"
+            style="@style/divider_line"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             app:layout_constraintTop_toBottomOf="@id/tvDetectionTimeout" />
@@ -153,7 +153,7 @@
 
         <View
             android:id="@+id/line4"
-            style="@style/lw006_divider_line"
+            style="@style/divider_line"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             app:layout_constraintTop_toBottomOf="@id/tv1" />
@@ -224,7 +224,7 @@
             android:textSize="15sp"
             android:textStyle="bold" />
 
-        <View style="@style/lw006_divider_line" />
+        <View style="@style/divider_line" />
 
         <CheckBox
             android:id="@+id/cbNotifyManDownEnd"
