--- a/app/src/main/res/layout/ps101m_activity_pos_ble.xml
+++ b/app/src/main/res/layout/ps101m_activity_pos_ble.xml
@@ -109,7 +109,7 @@
 
                 <View
                     android:id="@+id/line1"
-                    style="@style/lw006_divider_line"
+                    style="@style/divider_line"
                     android:layout_width="0dp"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
@@ -145,7 +145,7 @@
 
                 <View
                     android:id="@+id/line2"
-                    style="@style/lw006_divider_line"
+                    style="@style/divider_line"
                     android:layout_width="0dp"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
@@ -179,7 +179,7 @@
 
                 <View
                     android:id="@+id/line3"
-                    style="@style/lw006_divider_line"
+                    style="@style/divider_line"
                     android:layout_width="0dp"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
@@ -256,7 +256,7 @@
 
                     <SeekBar
                         android:id="@+id/sb_rssi_filter"
-                        style="@style/LW006CustomSeekbarStyle"
+                        style="@style/CustomSeekbarStyle"
                         android:layout_width="0dp"
                         android:layout_height="40dp"
                         android:layout_marginTop="20dp"
@@ -296,7 +296,7 @@
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
-                <View style="@style/lw006_divider_line" />
+                <View style="@style/divider_line" />
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
@@ -332,7 +332,7 @@
                         app:layout_constraintTop_toTopOf="parent" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
-                <View style="@style/lw006_divider_line" />
+                <View style="@style/divider_line" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -345,7 +345,7 @@
                     android:textSize="15sp"
                     android:textStyle="bold" />
 
-                <View style="@style/lw006_divider_line" />
+                <View style="@style/divider_line" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -359,7 +359,7 @@
                     android:textSize="15sp"
                     android:textStyle="bold" />
 
-                <View style="@style/lw006_divider_line" />
+                <View style="@style/divider_line" />
 
                 <TextView
                     android:layout_width="match_parent"
