--- a/app/src/main/res/layout/ps101m_activity_sos_alarm_setting.xml
+++ b/app/src/main/res/layout/ps101m_activity_sos_alarm_setting.xml
@@ -82,7 +82,7 @@
 
         <View
             android:id="@+id/line1"
-            style="@style/lw006_divider_line"
+            style="@style/divider_line"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv1" />
 
@@ -115,7 +115,7 @@
 
         <View
             android:id="@+id/line2"
-            style="@style/lw006_divider_line"
+            style="@style/divider_line"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv2" />
 
@@ -183,7 +183,7 @@
             android:textSize="15sp"
             android:textStyle="bold" />
 
-        <View style="@style/lw006_divider_line" />
+        <View style="@style/divider_line" />
 
         <CheckBox
             android:id="@+id/cbNotifySosEnd"
