--- a/app/src/main/res/layout/ps101m_fragment_device.xml
+++ b/app/src/main/res/layout/ps101m_fragment_device.xml
@@ -145,7 +145,7 @@
 
             <View
                 android:id="@+id/line2"
-                style="@style/lw006_divider_line"
+                style="@style/divider_line"
                 android:layout_marginTop="15dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tvLowPowerPromptTips" />
