--- a/app/src/main/res/layout/ps101m_fragment_network.xml
+++ b/app/src/main/res/layout/ps101m_fragment_network.xml
@@ -33,7 +33,7 @@
 
     <View
         android:id="@+id/line1"
-        style="@style/lw006_divider_line"
+        style="@style/divider_line"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         app:layout_constraintTop_toBottomOf="@+id/tvCellularConnectionStatus" />
@@ -63,7 +63,7 @@
 
     <View
         android:id="@+id/line2"
-        style="@style/lw006_divider_line"
+        style="@style/divider_line"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         app:layout_constraintTop_toBottomOf="@+id/tvMqttConnectionStatus" />
@@ -82,7 +82,7 @@
 
     <View
         android:id="@+id/line3"
-        style="@style/lw006_divider_line"
+        style="@style/divider_line"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         app:layout_constraintTop_toBottomOf="@+id/tvNetworkSetting" />
@@ -128,7 +128,7 @@
         app:layout_constraintTop_toTopOf="@+id/tvUnit" />
 
     <View
-        style="@style/lw006_divider_line"
+        style="@style/divider_line"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         app:layout_constraintTop_toBottomOf="@+id/tvReconnect" />
