修改第一轮提测问题

--- a/ps101/src/main/res/layout/activity_export_data.xml
+++ b/ps101/src/main/res/layout/activity_export_data.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white_ffffff"
     android:orientation="vertical">
 
@@ -172,8 +173,9 @@
         android:id="@+id/rv_export_data"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/ll_sync"
         android:padding="10dp"
+        tools:itemCount="5"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:listitem="@layout/item_export_data" />
 
 </LinearLayout>
