--- a/ps101/src/main/res/layout/activity_axis_data_report.xml
+++ b/ps101/src/main/res/layout/activity_axis_data_report.xml
@@ -42,10 +42,34 @@
             android:src="@drawable/ic_save" />
     </RelativeLayout>
 
+    <CheckBox
+        android:id="@+id/cbSwitch"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginRight="12dp"
+        android:background="@color/white_ffffff"
+        android:button="@null"
+        android:checked="false"
+        android:drawableRight="@drawable/selector_cb_btn"
+        android:paddingStart="12dp"
+        android:paddingRight="12dp"
+        android:text="Function Switch"
+        android:textColor="@color/black_333333"
+        android:textSize="15sp"
+        android:textStyle="bold" />
+
+    <View
+        style="@style/divider_line"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="12dp" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_margin="12dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="12dp"
         android:background="@color/white_ffffff"
         android:orientation="horizontal"
         android:paddingStart="12dp"
@@ -66,7 +90,7 @@
             android:layout_width="100dp"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:hint="0~65535"
+            android:hint="2~65535"
             android:inputType="number"
             android:maxLength="5"
             android:textColor="@color/black_333333"
