--- a/ps101/src/main/res/layout/fragment_general.xml
+++ b/ps101/src/main/res/layout/fragment_general.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,7 +12,7 @@
         android:id="@+id/tv_device_mode"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@color/white_ffffff"
+        android:background="@drawable/shape_radius_white_bg"
         android:drawableEnd="@drawable/ic_arrow_right"
         android:gravity="center_vertical"
         android:onClick="onDeviceMode"
@@ -27,7 +28,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginTop="10dp"
-        android:background="@color/white_ffffff"
+        android:background="@drawable/shape_radius_white_bg"
         android:drawableEnd="@drawable/ic_arrow_right"
         android:gravity="center_vertical"
         android:onClick="onAuxiliaryInterval"
@@ -43,7 +44,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginTop="10dp"
-        android:background="@color/white_ffffff"
+        android:background="@drawable/shape_radius_white_bg"
         android:drawableEnd="@drawable/ic_arrow_right"
         android:gravity="center_vertical"
         android:onClick="onAxisSettings"
@@ -59,7 +60,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginTop="10dp"
-        android:background="@color/white_ffffff"
+        android:background="@drawable/shape_radius_white_bg"
         android:drawableEnd="@drawable/ic_arrow_right"
         android:gravity="center_vertical"
         android:onClick="onBleSettings"
@@ -74,7 +75,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginTop="10dp"
-        android:background="@color/white_ffffff"
+        android:background="@drawable/shape_radius_white_bg"
         android:gravity="center_vertical"
         android:paddingStart="10dp"
         android:paddingEnd="10dp">
@@ -110,5 +111,36 @@
             android:textColor="@color/black_333333"
             android:textSize="15sp"
             android:textStyle="bold" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/shape_radius_white_bg"
+        android:orientation="vertical"
+        android:paddingStart="10dp"
+        android:paddingBottom="10dp"
+        android:paddingEnd="10dp">
+
+        <CheckBox
+            android:id="@+id/cbContinuity"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:button="@null"
+            android:checked="false"
+            android:drawableRight="@drawable/selector_cb_btn"
+            android:text="Continuity Transfer Function"
+            android:textColor="@color/black_333333"
+            android:textSize="15sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:lineSpacingMultiplier="1.1"
+            android:text="*When the device encounters network disconnection, whether continue to transfer the data that hadn't been uploaded before when it is connected to the network or powered up again"
+            android:textColor="@color/grey_a8a8a8"
+            android:textSize="12sp" />
     </LinearLayout>
 </LinearLayout>
